--- a/(New) Responsive Web Design/Build a Survey Form/index.html
+++ b/(New) Responsive Web Design/Build a Survey Form/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Survey</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <h1 id="title">Title</h1>
