--- a/(New) Responsive Web Design/Technical Documentation Page/index.html
+++ b/(New) Responsive Web Design/Technical Documentation Page/index.html
@@ -9,46 +9,46 @@
   <body>
     <main id="main-doc">
       <section class="main-section">
-        <header></header>
+        <header>Introduction</header>
       </section>
       <section class="main-section">
-        <header></header>
+        <header>What you should already know</header>
       </section>
       <section class="main-section">
-        <header></header>
+        <header>JavaScript and Java</header>
       </section>
       <section class="main-section">
-        <header></header>
+        <header>Hello world</header>
       </section>
       <section class="main-section">
-        <header></header>
+        <header>Variables</header>
       </section>
       <section class="main-section">
-        <header></header>
+        <header>Declaring variables</header>
       </section>
       <section class="main-section">
-        <header></header>
+        <header>Variable scope</header>
       </section>
       <section class="main-section">
-        <header></header>
+        <header>Global variables</header>
       </section>
       <section class="main-section">
-        <header></header>
+        <header>Constants</header>
       </section>
       <section class="main-section">
-        <header></header>
+        <header>Data types</header>
       </section>
       <section class="main-section">
-        <header></header>
+        <header>if...else statement</header>
       </section>
       <section class="main-section">
-        <header></header>
+        <header>while statement</header>
       </section>
       <section class="main-section">
-        <header></header>
+        <header>Function declarations</header>
       </section>
       <section class="main-section">
-        <header></header>
+        <header>Reference</header>
       </section>
     </main>
   </body>
