--- a/Responsive-web-design/Product-Landing-Page/index.html
+++ b/Responsive-web-design/Product-Landing-Page/index.html
@@ -21,14 +21,15 @@
         </nav>
     </header>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel magna eu est imperdiet ornare eget quis mi.
-        Nunc a felis in lacus venenatis porttitor in a eros. Mauris blandit ante tortor, at mattis mi volutpat nec. Nunc
-        id ex vel metus eleifend commodo id a urna. Cras vel sapien facilisis, volutpat elit quis, tincidunt nibh.
-        Aenean placerat rhoncus mollis. Sed nec tincidunt justo, nec euismod odio. Cras faucibus ex a magna interdum
-        vestibulum. Ut erat sapien, dapibus vel tincidunt quis, semper in dui. Ut ultrices odio et massa aliquam, quis
-        tincidunt nibh luctus. Vestibulum sit amet consectetur ante, id vulputate arcu. Suspendisse potenti. Integer
-        blandit nisi ut tortor tincidunt pretium. Curabitur at purus lacus. Praesent consequat libero sit amet nibh
-        feugiat, at facilisis lacus vehicula. Vivamus nec quam nisi.</p>
+    <main>
+        <section>
+            <h1>Comfy, beautiful and best quality</h1>
+            <form>
+                <input placeholder="Enter your email address">
+                <input type="submit" value="Submit">
+            </form>
+        </section>
+    </main>
 
 </body>
 
