update main.css and Responsive-web-design/Product-Landing-Page/index.html

--- a/Responsive-web-design/Product-Landing-Page/index.html
+++ b/Responsive-web-design/Product-Landing-Page/index.html
@@ -23,11 +23,34 @@
 
     <main>
         <section>
-            <h1>Comfy, beautiful and best quality</h1>
+            <h1>Comfy, cool and affordable</h1>
             <form>
                 <input placeholder="Enter your email address">
                 <input type="submit" value="Submit">
             </form>
+        </section>
+        <section>
+            <div>
+                <div></div>
+                <div>
+                    <h2>Quality materials</h2>
+                    <p>Feel relaxed and at ease with our comfortable 100% coton shirts</p>
+                </div>
+            </div>
+            <div>
+                <div></div>
+                <div>
+                    <h2>Trend-Setting</h2>
+                    <p>Stay trendy and stylish with our innovative and fashionable designs</p>
+                </div>
+            </div>
+            <div>
+                <div></div>
+                <div>
+                    <h2>Budget-Friendly</h2>
+                    <p>Get the most value for your money with our reasonably priced shirts</p>
+                </div>
+            </div>
         </section>
     </main>
 
