--- a/Responsive-web-design/Product-Landing-Page/index.html
+++ b/Responsive-web-design/Product-Landing-Page/index.html
@@ -14,7 +14,7 @@
 
         <nav id="nav-bar">
             <ul>
-                <li><a>Home</a></li>
+                <li><a>Features</a></li>
                 <li><a>pricing</a></li>
                 <li><a>contact us</a></li>
             </ul>
