--- a/Responsive-web-design/Product-Landing-Page/index.html
+++ b/Responsive-web-design/Product-Landing-Page/index.html
@@ -29,6 +29,7 @@
                 <input type="submit" value="Submit">
             </form>
         </section>
+
         <section>
             <div>
                 <div></div>
@@ -50,6 +51,33 @@
                     <h2>Budget-Friendly</h2>
                     <p>Get the most value for your money with our reasonably priced shirts</p>
                 </div>
+            </div>
+        </section>
+
+        <section>
+            <div>
+                <div></div>
+                <h3></h3>
+                <p></p>
+                <p></p>
+                <p></p>
+                <form action=""><input type="submit"></form>
+            </div>
+            <div>
+                <div></div>
+                <h3></h3>
+                <p></p>
+                <p></p>
+                <p></p>
+                <form action=""><input type="submit"></form>
+            </div>
+            <div>
+                <div></div>
+                <h3></h3>
+                <p></p>
+                <p></p>
+                <p></p>
+                <form action=""><input type="submit"></form>
             </div>
         </section>
     </main>
