--- a/Responsive-web-design/Product-Landing-Page/index.html
+++ b/Responsive-web-design/Product-Landing-Page/index.html
@@ -56,24 +56,24 @@
 
         <section>
             <div>
-                <div></div>
-                <h3></h3>
+                <div><h3>Tshirt</h3></div>
+                <h3>20$</h3>
                 <p></p>
                 <p></p>
                 <p></p>
                 <form action=""><input type="submit"></form>
             </div>
             <div>
-                <div></div>
-                <h3></h3>
+                <div><h3>Tshirt + pins</h3></div>
+                <h3>25$</h3>
                 <p></p>
                 <p></p>
                 <p></p>
                 <form action=""><input type="submit"></form>
             </div>
             <div>
-                <div></div>
-                <h3></h3>
+                <div><h3>Tshirt + pin + poster</h3></div>
+                <h3>35$</h3>
                 <p></p>
                 <p></p>
                 <p></p>
