--- a/Responsive-web-design/Product-Landing-Page/index.html
+++ b/Responsive-web-design/Product-Landing-Page/index.html
@@ -58,26 +58,32 @@
             <div>
                 <div><h3>Tshirt</h3></div>
                 <h3>20$</h3>
-                <p></p>
-                <p></p>
-                <p></p>
-                <form action=""><input type="submit"></form>
+                <ol>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ol>
+                <button></button>
             </div>
             <div>
                 <div><h3>Tshirt + pins</h3></div>
                 <h3>25$</h3>
-                <p></p>
-                <p></p>
-                <p></p>
-                <form action=""><input type="submit"></form>
+                <ol>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ol>
+                <button></button>
             </div>
             <div>
                 <div><h3>Tshirt + pin + poster</h3></div>
                 <h3>35$</h3>
-                <p></p>
-                <p></p>
-                <p></p>
-                <form action=""><input type="submit"></form>
+                <ol>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ol>
+                <button></button>
             </div>
         </section>
     </main>
