--- a/Responsive-web-design/Product-Landing-Page/index.html
+++ b/Responsive-web-design/Product-Landing-Page/index.html
@@ -56,32 +56,32 @@
 
         <section>
             <div>
-                <div><h3>Tshirt</h3></div>
-                <h3>20$</h3>
-                <ol>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ol>
-                <button></button>
-            </div>
-            <div>
-                <div><h3>Tshirt + pins</h3></div>
+                <div><h3>Base pack(Tshirt)</h3></div>
                 <h3>25$</h3>
                 <ol>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>100% coton tshirt</li>
+                    <li>Season's design</li>
+                    <li>All our love</li>
                 </ol>
                 <button></button>
             </div>
             <div>
-                <div><h3>Tshirt + pin + poster</h3></div>
-                <h3>35$</h3>
+                <div><h3>Team pack(Tshirt + pins)</h3></div>
+                <h3>30$</h3>
                 <ol>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Base pack</li>
+                    <li>Pin with our logo</li>
+                    <li>Even more love</li>
+                </ol>
+                <button></button>
+            </div>
+            <div>
+                <div><h3>boss pack(Tshirt + pin + poster)</h3></div>
+                <h3>42$</h3>
+                <ol>
+                    <li>Team pack</li>
+                    <li>poster of the concept art</li>
+                    <li>Infinite Gratitude</li>
                 </ol>
                 <button></button>
             </div>
