--- a/Responsive-web-design/Product-Landing-Page/index.html
+++ b/Responsive-web-design/Product-Landing-Page/index.html
@@ -88,6 +88,17 @@
         </section>
     </main>
 
+    <footer>
+        <nav>
+            <ul>
+                <li>Privacy</li>
+                <li>Term</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+        <p>Copyright 2023, Original Monkey products</p>
+    </footer>
+
 </body>
 
 </html>
