--- a/Responsive-web-design/Product-Landing-Page/index.html
+++ b/Responsive-web-design/Product-Landing-Page/index.html
@@ -14,9 +14,9 @@
 
         <nav id="nav-bar">
             <ul>
-                <li><a>Features</a></li>
-                <li><a>pricing</a></li>
-                <li><a>contact us</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#pricing">Pricing</a></li>
+                <li><a>Contact us</a></li>
             </ul>
         </nav>
     </header>
@@ -30,7 +30,7 @@
             </form>
         </section>
 
-        <section>
+        <section id="features">
             <div>
                 <div></div>
                 <div>
