modified:   Responsive-web-design/Product-Landing-Page/index.html

--- a/Responsive-web-design/Product-Landing-Page/index.html
+++ b/Responsive-web-design/Product-Landing-Page/index.html
@@ -54,7 +54,7 @@
             </div>
         </section>
 
-        <section>
+        <section id="pricing">
             <div>
                 <div><h3>Base pack(Tshirt)</h3></div>
                 <h3>25$</h3>
@@ -88,7 +88,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer id="contact">
         <nav>
             <ul>
                 <li>Privacy</li>
