--- a/Responsive-web-design/Product-Landing-Page/index.html
+++ b/Responsive-web-design/Product-Landing-Page/index.html
@@ -14,9 +14,9 @@
 
         <nav id="nav-bar">
             <ul>
-                <li><a href="#features">Features</a></li>
-                <li><a href="#pricing">Pricing</a></li>
-                <li><a>Contact us</a></li>
+                <li class="nav-link"><a href="#features">Features</a></li>
+                <li class="nav-link"><a href="#pricing">Pricing</a></li>
+                <li class="nav-link"><a>Contact us</a></li>
             </ul>
         </nav>
     </header>
