update main.css and Responsive-web-design/Product-Landing-Page/index.html

--- a/Responsive-web-design/Product-Landing-Page/index.html
+++ b/Responsive-web-design/Product-Landing-Page/index.html
@@ -52,11 +52,15 @@
                     <p>Get the most value for your money with our reasonably priced shirts</p>
                 </div>
             </div>
+            <iframe id="rick" width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0"
+                allowfullscreen></iframe>
         </section>
 
         <section id="pricing">
             <div>
-                <div><h3>Base pack(Tshirt)</h3></div>
+                <div>
+                    <h3>Base pack(Tshirt)</h3>
+                </div>
                 <h3>25$</h3>
                 <ol>
                     <li>100% coton tshirt</li>
@@ -66,7 +70,9 @@
                 <button></button>
             </div>
             <div>
-                <div><h3>Team pack(Tshirt + pins)</h3></div>
+                <div>
+                    <h3>Team pack(Tshirt + pins)</h3>
+                </div>
                 <h3>30$</h3>
                 <ol>
                     <li>Base pack</li>
@@ -76,7 +82,9 @@
                 <button></button>
             </div>
             <div>
-                <div><h3>boss pack(Tshirt + pin + poster)</h3></div>
+                <div>
+                    <h3>boss pack(Tshirt + pin + poster)</h3>
+                </div>
                 <h3>42$</h3>
                 <ol>
                     <li>Team pack</li>
