update main.css and Responsive-web-design/Product-Landing-Page/index.html

--- a/Responsive-web-design/Product-Landing-Page/index.html
+++ b/Responsive-web-design/Product-Landing-Page/index.html
@@ -24,9 +24,9 @@
     <main>
         <section>
             <h1>Comfy, cool and affordable</h1>
-            <form>
-                <input placeholder="Enter your email address">
-                <input type="submit" value="Submit">
+            <form id="form" action="https://www.freecodecamp.com/email-submit">
+                <input id="email" placeholder="Enter your email address" type="email">
+                <input id="submit" type="submit" value="Submit">
             </form>
         </section>
 
@@ -52,7 +52,7 @@
                     <p>Get the most value for your money with our reasonably priced shirts</p>
                 </div>
             </div>
-            <iframe id="rick" width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0"
+            <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0"
                 allowfullscreen></iframe>
         </section>
 
