update main.css and Responsive-web-design/Product-Landing-Page/index.html

--- a/Responsive-web-design/Product-Landing-Page/index.html
+++ b/Responsive-web-design/Product-Landing-Page/index.html
@@ -74,7 +74,7 @@
                     <p>Get the most value for your money with our reasonably priced shirts</p>
                 </div>
             </div>
-            <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0"
+            <iframe id="video" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0"
                 allowfullscreen></iframe>
         </section>
 
