update main.css and Responsive-web-design/Product-Landing-Page/index.html

--- a/Responsive-web-design/Product-Landing-Page/index.html
+++ b/Responsive-web-design/Product-Landing-Page/index.html
@@ -74,8 +74,7 @@
                     <p>Get the most value for your money with our reasonably priced shirts</p>
                 </div>
             </div>
-            <iframe id="video" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0"
-                allowfullscreen></iframe>
+            <iframe id="video" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
         </section>
 
         <section id="pricing">
@@ -119,14 +118,16 @@
     </main>
 
     <footer id="contact">
-        <nav>
-            <ul>
-                <li>Privacy</li>
-                <li>Term</li>
-                <li>Contact</li>
-            </ul>
-        </nav>
-        <p>Copyright 2023, Original Monkey products</p>
+        <div>
+            <nav>
+                <ul>
+                    <li>Privacy</li>
+                    <li>Term</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+            <p>Copyright 2023, Original Monkey products</p>
+        </div>
     </footer>
 
 </body>
