update main.css and Responsive-web-design/Product-Landing-Page/index.html

--- a/Responsive-web-design/Product-Landing-Page/index.html
+++ b/Responsive-web-design/Product-Landing-Page/index.html
@@ -121,9 +121,9 @@
         <div>
             <nav>
                 <ul>
-                    <li>Privacy</li>
-                    <li>Term</li>
-                    <li>Contact</li>
+                    <li class="nav-link">Privacy</li>
+                    <li class="nav-link">Term</li>
+                    <li class="nav-link">Contact</li>
                 </ul>
             </nav>
             <p>Copyright 2023, Original Monkey products</p>
