update main.css and Responsive-web-design/Product-Landing-Page/index.html

--- a/Responsive-web-design/Product-Landing-Page/index.html
+++ b/Responsive-web-design/Product-Landing-Page/index.html
@@ -74,45 +74,45 @@
                     <p>Get the most value for your money with our reasonably priced shirts</p>
                 </div>
             </div>
-            <iframe id="video" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+            <div><iframe id="video" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe></div>
         </section>
 
         <section id="pricing">
             <div>
                 <div>
-                    <h3>Base pack(Tshirt)</h3>
+                    <h3>Base pack</h3>
                 </div>
-                <h3>25$</h3>
-                <ol>
+                <h2>25$</h3>
+                <ul>
                     <li>100% coton tshirt</li>
                     <li>Season's design</li>
                     <li>All our love</li>
-                </ol>
-                <button></button>
+                </ul>
+                <button>Select</button>
             </div>
             <div>
                 <div>
-                    <h3>Team pack(Tshirt + pins)</h3>
+                    <h3>Team pack</h3>
                 </div>
-                <h3>30$</h3>
-                <ol>
+                <h2>30$</h3>
+                <ul>
                     <li>Base pack</li>
                     <li>Pin with our logo</li>
                     <li>Even more love</li>
-                </ol>
-                <button></button>
+                </ul>
+                <button>Select</button>
             </div>
             <div>
                 <div>
-                    <h3>boss pack(Tshirt + pin + poster)</h3>
+                    <h3>boss pack</h3>
                 </div>
-                <h3>42$</h3>
-                <ol>
+                <h2>42$</h3>
+                <ul>
                     <li>Team pack</li>
                     <li>poster of the concept art</li>
                     <li>Infinite Gratitude</li>
-                </ol>
-                <button></button>
+                </ul>
+                <button>Select</button>
             </div>
         </section>
     </main>
